# Simple_code_minxing_Cplusplus_CUDA

program/: CMakeLists.txt  README.md
program/Math_CUDA/: CMakeLists.txt
program/Math_CUDA/src/: Math.cpp  add.cu
program/src/: main.cpp
